GNOME Bugzilla – Bug 597717
Fix thinko in spinner cell renderer's render()
Last modified: 2009-10-07 21:51:16 UTC
We shouldn't try to see if a rectangle doesn't intersect with itself.
Created attachment 144981 [details] [review] Fix thinko in spinner cell renderer's render()
Yup, please commit. Thanks dude.
Attachment 144981 [details] pushed as 8da352e - Fix thinko in spinner cell renderer's render()