Fix thinko in spinner cell renderer's render()

We shouldn't try to see if a rectangle doesn't intersect with
itself.

https://bugzilla.gnome.org/show_bug.cgi?id=597717